# glimpser-rs

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.backend.lean  Dockerfile.backend.simple  Dockerfile.frontend  FRESH_EYES_REVIEW.md  Makefile  PLAN_OF_ACTION.md  audit.md  auth-audit.md  backend-frontend-plan.md  backend-frontend.md  bootstrap_admin.exp  bootstrap_user.exp  claude.md  clippy.toml  code-quality-review.md  code-review.md  create_user.sh  deny.toml  docker-compose.dev.yml  docker-compose.yml  feature_gap_analysis.md  fixes-plan.md  frontend_architecture.md  glimpser.db  issues.md  justfile  mjpeg-plan.md  mjpeg.md  mock-issue.md  nginx.conf  performance.md  prompt_plan.md  refactor-web.plan.md  (+8 more)
app/: Cargo.toml
app/src/: main.rs
app/tests/: e2e_smoke.rs
gl_ai/: Cargo.toml
gl_ai/src/: lib.rs  openai.rs  stub.rs
gl_analysis/: Cargo.toml
gl_analysis/src/: lib.rs  pipeline.rs  processors.rs  rule_engine.rs
gl_analysis/tests/: integration_tests.rs
gl_cap/: Cargo.toml
gl_cap/src/: builder.rs  cap-1.2.xsd  lib.rs  profiles.rs  validation.rs  xsd.rs
gl_cap/tests/: integration_tests.rs
gl_capture/: Cargo.toml  PROCESS_LEAK_FIX.md
gl_capture/benches/: streaming_performance.rs
gl_capture/src/: artifact_storage.rs  background_processor.rs  ffmpeg_source.rs  file_source.rs  hardware_accel.rs  lib.rs  process_pool.rs  snapshot_limiter.rs  streaming_source.rs  website_source.rs  yt_dlp_source.rs
gl_config/: Cargo.toml
gl_config/src/: lib.rs
gl_core/: Cargo.toml
gl_core/src/: error.rs  id.rs  lib.rs  telemetry.rs  time.rs
gl_db/: Cargo.toml  test_glimpser_01K377RK1M0BK8W665FV3NC2FM.db  test_glimpser_01K377RK1M91E7HEVQFXNP3KHN.db-shm  test_glimpser_01K377RK1M91E7HEVQFXNP3KHN.db-wal  test_glimpser_01K377RK1MHQWF8PJNG56HGNDY.db-shm  test_glimpser_01K377RK1MHQWF8PJNG56HGNDY.db-wal  test_glimpser_01K377RK1MKFAB3JYE7833C0Z3.db-shm  test_glimpser_01K377RK1MKFAB3JYE7833C0Z3.db-wal  test_glimpser_01K377RK1MZA4917T1KQQ2CBQ4.db-shm  test_glimpser_01K377RK1MZA4917T1KQQ2CBQ4.db-wal
gl_db/.sqlx/: query-28d1484f3a63d4b4f88b0a43f83da1ec0d188fc0bac40a7d6287d3669a1e9a7c.json  query-2a1bcc7cb8898bd2d73e9f44a27e45ecdd018a221944795cd2879db942af51e9.json  query-4e86309049ff72b485dfdfff5cb7eda1b84bbd4d31aa197b6887d56a29e7ce55.json  query-67fee66030cfd8604d593e1d09624e8f86621b900fe1d5ec0b2a130d12bf9d8b.json  query-6c52db70bad996f4f06b2db5e53bb0f0f278b5ef8b02f3e17f34a9d11901f85b.json  query-7a1981ee5fd5913fe0860bb5e318440feac23fbea2e5633cd41019879135c975.json  query-7e04589f5884a3dad943824086ab04bfd3792c1ca3549e484983c0ed57c60a8e.json  query-8685031a5546f9b8df82cef63792b2c3a470eeab6931e81288a8aa1ddb1e9882.json  query-87ea31e51a28aadefb3ef367e87e9901b2b3fc27b56af661c282261e6f38d33f.json  query-90ac2ace2ce323b22c9fb93e3d0db47fce3ab2fc0ec63abd3e624dd819377296.json  query-9d0e62738f728a5de832a52181a94b4cfd77d3590750c4b18bdc157c04bb10b3.json  query-a52bc508af288d781fbe4392fe5f21291ddd1db7b1f51dabcee93279f168ca8e.json  query-ade4aa2bd1e277dd9bc2cf4af1656f9ec39f170bf985d1145a69d3009bd185e1.json  query-c1ff5d3bf5fe54d96325a6adf8b0522b09e3c92c96a665da5571ab6242d94ad2.json  query-c759ab59ba02b4679306a4c5c9250968f8d1e3137d6d05a0911fe5242d37d175.json  query-d08d4520f1245a29a3fc615ddfbe6b7f4cb91728d225bbfa195aa1f0128f37ee.json  query-db12f758887e5feb75de2d43ccec4897f8dfba56544497c81134330d07a92ea5.json  query-e91883a7001e125faff9fe1198bb493180d7dffa621bf6d56a7398420bc65ba8.json  query-f0b40c2b955af6ff5896fed8990a03e2f029fc20143ec3cb0f7656dbe5d35a91.json  query-f29dba3ff9445973e58d46f575a848839473141af8eec07fb2675567045e5c73.json  query-f68459ed650bf0cfa34b936df15b84d3a41b64db923d35eeb2a925cb4bd62555.json  query-f9ffd2548d39c4b00dab314367798a0e7a4a6e10c1181113214c45ba7eef0c85.json  query-fb3269a1bcfdf92140219063f321bdc3613f906e6244e083cf1ac42203188682.json
gl_db/migrations/: 001_create_users_table.sql  002_create_api_keys_table.sql  003_create_templates_table.sql  004_create_captures_table.sql  005_create_jobs_table.sql  006_create_alerts_table.sql  007_create_events_table.sql  (+18 more)
gl_notify/: Cargo.toml
gl_obs/: Cargo.toml
gl_proc/: Cargo.toml
gl_sched/: Cargo.toml
gl_scheduler/: Cargo.toml  DISTRIBUTED_LOCKING.md
gl_storage/: Cargo.toml
gl_stream/: Cargo.toml
gl_update/: Cargo.toml
gl_vision/: Cargo.toml
gl_web/: Cargo.toml  test_web_01K37DCSG604QD198MW3HD319H.db-shm  test_web_01K37DCSG604QD198MW3HD319H.db-wal  test_web_01K37DCSG6DWSSD8Q6M8ZV9PRX.db  test_web_01K37DCSG6R84728ZJ4F5DVYKM.db  test_web_01K37DCSG6RMEQJAV9JY127XJV.db-shm  test_web_01K37DCSG6RMEQJAV9JY127XJV.db-wal  test_web_01K37DCSG6WRB7C58JGS4MECEF.db-shm  test_web_01K37DCSG6WRB7C58JGS4MECEF.db-wal  test_web_01K37DCSG71GJFSSJSEXZWMQ0K.db  test_web_01K37DD18RQ1W7DXZKPC9WVREQ.db-shm  test_web_01K37DD18RQ1W7DXZKPC9WVREQ.db-wal  test_web_01K37J5FVT1F3W8VKMD0QB9G3M.db-shm  test_web_01K37J5FVT1F3W8VKMD0QB9G3M.db-wal  test_web_01K37J5FVTDMBJ58940CVV2SGK.db  test_web_01K37J5FVTE1CB360779EK8C7E.db-shm  test_web_01K37J5FVTE1CB360779EK8C7E.db-wal  test_web_01K37J5FVTJ5JKBDBPBJEGMQZE.db  test_web_01K37J5FVTSF98VBKNEN793QAC.db  test_web_01K37J5FVWZK9T24W5E5GPD42M.db  test_web_01K37JA9A784R349JS90FCQA0G.db-shm  test_web_01K37JA9A784R349JS90FCQA0G.db-wal  test_web_01K37JA9A7JZCK38HWMBNNP8JM.db  test_web_01K37JA9A7R4ZX1CY5SEWSV2MV.db  test_web_01K37JA9A853H75PMHWXJ3SGEB.db  test_web_01K37JA9A8E8RZ129ZDTHYMXBS.db  test_web_01K37JA9A8KPV1MJ7CYPQ63KNB.db  test_web_01K37JDNSCCD8NTRCSF5NWYCWC.db-shm  test_web_01K37JDNSCCD8NTRCSF5NWYCWC.db-wal  test_web_01K37JDYK5XQ78B0C789QFAW1J.db-shm  test_web_01K37JDYK5XQ78B0C789QFAW1J.db-wal  test_web_01K37JE7SZXAB153RH63QGQ4J6.db-shm  test_web_01K37JE7SZXAB153RH63QGQ4J6.db-wal  test_web_01K37JEHJ350P3VDJDR1ESATE9.db-shm  test_web_01K37JEHJ350P3VDJDR1ESATE9.db-wal  test_web_01K37JF7FB6TQM4KFNKSXTRDGF.db-shm  test_web_01K37JF7FB6TQM4KFNKSXTRDGF.db-wal  test_web_01K37JF7FBE233TEBX7NR6YP97.db-shm  test_web_01K37JF7FBE233TEBX7NR6YP97.db-wal  test_web_01K37JGHS1MSDSKEKA3HQMNMRY.db-shm  (+24 more)
test_support/: Cargo.toml
(+217 files in other folders)
