[workspace]
resolver = "2"
members = [
    "app",
    "gl_core",
    "gl_config",
    "gl_obs",
    "gl_db",
    "gl_web",
    "gl_proc",
    "gl_capture",
    "gl_sched",
    "gl_stream",
    "gl_notify",
    "gl_cap",
    "gl_ai",
    "gl_vision",
    "gl_update",
    "test_support",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ulid = { version = "1.2", features = ["serde"] }

# Web framework
actix-web = "4.9"

# Observability
prometheus-client = "0.22"
uuid = { version = "1.10", features = ["v4"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }

# Configuration
config = "0.14"
validator = { version = "0.18", features = ["derive"] }

# Testing
wiremock = "0.6"