[workspace]
resolver = "2"
members = [
    "app",
    "gl_core",
    "gl_config",
    "gl_obs",
    "gl_db",
    "gl_web",
    "gl_proc",
    "gl_capture",
    "gl_sched",
    "gl_scheduler",
    "gl_stream",
    "gl_notify",
    "gl_cap",
    "gl_ai",
    "gl_vision",
    "gl_analysis",
    "gl_update",
    "gl_storage",
    "test_support",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ulid = { version = "1.2", features = ["serde"] }

# Web framework
actix-web = "4.9"

# Observability
prometheus-client = "0.22"
metrics = "0.23"
uuid = { version = "1.10", features = ["v4"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }

# Configuration
config = "0.14"
validator = { version = "0.18", features = ["derive"] }

# Authentication & Authorization
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = "9.3"
rand_core = { version = "0.6", features = ["getrandom"] }

# Async utilities
futures-util = "0.3"
async-trait = "0.1"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
base64 = "0.22"

# OpenAPI
utoipa = { version = "4.2", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }

# Static file serving
actix-files = "0.6"
mime_guess = "2.0"
sha2 = "0.10"
hex = "0.4"

# Object storage
object_store = { version = "0.11", features = ["http", "aws", "azure"] }
url = "2.5"
backoff = { version = "0.4", features = ["tokio"] }
md5 = "0.7"

# Job scheduling
cron = "0.12"
tokio-cron-scheduler = "0.10"
tokio-util = "0.7"
hostname = "0.4"

# Testing
wiremock = "0.6"
