# ABOUTME: Main binary for glimpser surveillance platform
# ABOUTME: Orchestrates all components and starts the application

[package]
name = "app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "glimpser"
path = "src/main.rs"

[dependencies]
gl_core = { path = "../gl_core" }
tokio.workspace = true
tracing.workspace = true