# ABOUTME: Main binary for glimpser surveillance platform
# ABOUTME: Orchestrates all components and starts the application

[package]
name = "app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "glimpser"
path = "src/main.rs"

[dependencies]
gl_core = { path = "../gl_core" }
gl_config = { path = "../gl_config" }
gl_db = { path = "../gl_db" }
gl_obs = { path = "../gl_obs" }
gl_stream = { path = "../gl_stream" }
gl_update = { path = "../gl_update" }
gl_web = { path = "../gl_web" }
gl_ai = { path = "../gl_ai", features = ["ai_online"] }
gl_scheduler = { path = "../gl_scheduler" }
tokio.workspace = true
tracing.workspace = true
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
sqlx.workspace = true
rpassword = "7.0"
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.12"
serde_json = "1.0"
test_support = { path = "../test_support" }
