# ABOUTME: AI client abstraction with OpenAI and stub implementations
# ABOUTME: Provides AI-powered analysis and content generation

[package]
name = "gl_ai"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl_core = { path = "../gl_core" }
serde.workspace = true
tokio.workspace = true
