# ABOUTME: AI client abstraction with OpenAI and stub implementations
# ABOUTME: Provides AI-powered analysis and content generation

[package]
name = "gl_ai"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl_core = { path = "../gl_core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
tracing.workspace = true

# Online AI client dependencies (feature-gated)
reqwest = { version = "0.12", features = ["json"], optional = true }
base64 = { version = "0.22", optional = true }

[features]
default = []
ai_online = ["reqwest", "base64"]
