# ABOUTME: Analysis pipeline and rule engine for processing frames and events
# ABOUTME: Composes motion detection, AI analysis, and rule-based notifications

[package]
name = "gl_analysis"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl_core = { path = "../gl_core" }
gl_vision = { path = "../gl_vision" }
gl_ai = { path = "../gl_ai" }
gl_db = { path = "../gl_db" }
gl_notify = { path = "../gl_notify" }
serde.workspace = true
serde_json.workspace = true
serde_yaml = { version = "0.9" }
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
bytes.workspace = true
regex = "1.10"

[dev-dependencies]
test_support = { path = "../test_support" }
