# ABOUTME: Capture engine for various media sources (ffmpeg, websites, files)
# ABOUTME: Provides trait-based capture abstractions and implementations

[package]
name = "gl_capture"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl_core = { path = "../gl_core" }
gl_proc = { path = "../gl_proc" }
test_support = { path = "../test_support" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
bytes.workspace = true
async-trait.workspace = true