# ABOUTME: Capture engine for various media sources (ffmpeg, websites, files)
# ABOUTME: Provides trait-based capture abstractions and implementations

[package]
name = "gl_capture"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl_core = { path = "../gl_core" }
gl_proc = { path = "../gl_proc" }
test_support = { path = "../test_support" }
tokio.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bytes.workspace = true
async-trait.workspace = true
metrics.workspace = true

# Website capture dependencies (feature-gated)
thirtyfour = { version = "0.34", optional = true }
base64 = { version = "0.22", optional = true }

[features]
default = []
website = ["thirtyfour", "base64"]
website_live = ["website"]