# ABOUTME: Configuration management with validation and environment loading
# ABOUTME: Handles all application settings from environment variables and files

[package]
name = "gl_config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl_core = { path = "../gl_core" }
serde.workspace = true