# ABOUTME: Database layer with SQLite, migrations, and repositories
# ABOUTME: Handles all data persistence and database operations

[package]
name = "gl_db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl_core = { path = "../gl_core" }
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
ulid.workspace = true
thiserror.workspace = true
linked-hash-map.workspace = true

[dev-dependencies]
# Testing utilities
