# ABOUTME: Notification system with multiple channel adapters
# ABOUTME: Sends alerts via SMTP, SMS, webhooks, and push notifications

[package]
name = "gl_notify"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl_core = { path = "../gl_core" }
serde.workspace = true
tokio.workspace = true
