# ABOUTME: Observability services including health checks and metrics
# ABOUTME: Provides monitoring endpoints for operational visibility

[package]
name = "gl_obs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl_core = { path = "../gl_core" }
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
prometheus-client.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
# actix-web test utilities are available by default in the main crate
