# ABOUTME: Streaming services for MJPEG and RTSP video streams
# ABOUTME: Provides real-time video streaming capabilities

[package]
name = "gl_stream"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl_core = { path = "../gl_core" }
gl_capture = { path = "../gl_capture" }
test_support = { path = "../test_support" }
actix-web.workspace = true
tokio.workspace = true
futures-util.workspace = true
bytes.workspace = true
async-trait.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
prometheus-client.workspace = true

# Optional RTSP support via GStreamer
glib = { version = "0.20", optional = true }
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-rtsp-server = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }

[features]
default = []
rtsp = ["glib", "gstreamer", "gstreamer-app", "gstreamer-rtsp-server", "gstreamer-video"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

criterion = { version = "0.5", features = ["async"] }

[[bench]]
name = "mjpeg"
harness = false
