# ABOUTME: Auto-update system with signature verification
# ABOUTME: Manages application updates and rollbacks safely

[package]
name = "gl_update"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl_core = { path = "../gl_core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
rand_core.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
sha2.workspace = true
hex.workspace = true
tempfile = "3.8"
fs_extra = "1.3"
futures-util.workspace = true
bytes.workspace = true
chrono.workspace = true

[dev-dependencies]
wiremock.workspace = true

[features]
default = ["sidecar"]
sidecar = []
self-replace = []
