# ABOUTME: Motion detection with pure-Rust fallback and optional OpenCV acceleration
# ABOUTME: Provides pixel-diff and MOG2 motion detection algorithms

[package]
name = "gl_vision"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl_core = { path = "../gl_core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# OpenCV dependencies (feature-gated)
opencv = { version = "0.95", optional = true }

[dev-dependencies]
test_support = { path = "../test_support" }
tokio.workspace = true

# Benchmarking dependencies (feature-gated)
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
heavy_opencv = ["opencv"]
benchmarks = []

[[bench]]
name = "motion_detection"
harness = false
required-features = ["benchmarks"]
