# ABOUTME: Unified web service with server-rendered frontend and REST API
# ABOUTME: Hybrid Axum (frontend) + Actix-web (API) with HTMX and Askama templates

[package]
name = "gl_web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
gl_core = { path = "../gl_core" }
gl_db = { path = "../gl_db" }
gl_config = { path = "../gl_config" }
gl_capture = { path = "../gl_capture", features = ["website_embedded"] }
gl_storage = { path = "../gl_storage" }
gl_stream = { path = "../gl_stream" }
gl_notify = { path = "../gl_notify" }
gl_cap = { path = "../gl_cap" }
gl_update = { path = "../gl_update" }

actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
validator.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
rand_core.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
futures-util.workspace = true
chrono = { version = "0.4", features = ["serde"] }
actix-files.workspace = true
mime_guess.workspace = true
sha2.workspace = true
hex.workspace = true
sqlx.workspace = true
tokio-stream = { version = "0.1.17", features = ["sync"] }
async-stream = "0.3"
bytes.workspace = true

# New dependencies for Axum + HTMX + Askama stack
axum = "0.7"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"
# Testing utilities already included in main actix-web

[features]
default = ["website"]
website = ["gl_capture/website"]
