# ABOUTME: Shared testing utilities and helper functions
# ABOUTME: Common test fixtures and mocks for all crates

[package]
name = "test_support"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
